[workspace]
package.version = "0.7.6"
members = [
    ".",
    "xtask",
]

[package]
name = "sd"
version.workspace = true
edition = "2018"
authors = ["Gregory <gregory.mkv@gmail.com>"]
description = "An intuitive find & replace CLI"
readme = "README.md"
keywords = ["sed", "find", "replace", "regex"]
license = "MIT"
homepage = "https://github.com/chmln/sd"
repository = "https://github.com/chmln/sd.git"
categories = ["command-line-utilities", "text-processing", "development-tools"]

[dependencies]
regex = "1.9.5"
rayon = "1.8.0"
unescape = "0.1.0"
memmap2 = "0.7.1"
tempfile = "3.8.0"
thiserror = "1.0.48"
globwalk = "0.8.1"
ignore = "0.4.20"
ansi_term = "0.12.1"
is-terminal = "0.4.9"
clap = { version = "4.4.3", features = ["derive", "deprecated", "wrap_help"] }

[dev-dependencies]
assert_cmd = "2.0.12"
anyhow = "1.0.75"
clap_mangen = "0.2.14"

[profile.release]
opt-level = 3
lto = true
strip = true
