[workspace]
members = [
    ".",
    "xtask",
]

[workspace.dependencies.clap]
version = "4.4.6"
features = ["derive", "deprecated", "wrap_help"]

[workspace.package]
edition = "2021"
version = "1.0.0"

[package]
name = "sd"
version.workspace = true
edition.workspace = true
authors = ["Gregory <gregory.mkv@gmail.com>"]
description = "An intuitive find & replace CLI"
readme = "README.md"
keywords = ["sed", "find", "replace", "regex"]
license = "MIT"
homepage = "https://github.com/chmln/sd"
repository = "https://github.com/chmln/sd.git"
categories = ["command-line-utilities", "text-processing", "development-tools"]
rust-version = "1.70.0"

[dependencies]
regex = "1.10.2"
rayon = "1.8.0"
unescape = "0.1.0"
memmap2 = "0.9.0"
tempfile = "3.8.0"
thiserror = "1.0.50"
clap.workspace = true

[dev-dependencies]
assert_cmd = "2.0.12"
anyhow = "1.0.75"
clap_mangen = "0.2.14"
proptest = "1.3.1"
console = "0.15.7"
insta = "1.34.0"
ansi-to-html = "0.1.3"
regex-automata = "0.4.3"

[profile.release]
opt-level = 3
lto = true
strip = true
