[workspace]
resolver = "3"
members = [
    "sd",
    "sd-cli",
    "xtask",
]

[workspace.dependencies]
tempfile = "3.8.0"
clap = {version =  "4.4.6", features = ["derive", "wrap_help"]}



[workspace.package]
edition = "2024"
version = "1.0.0"
authors = ["Gregory <gregory.mkv@gmail.com>", "Orión <oriongonza42@pm.me>"]
description = "An intuitive find & replace CLI"
readme = "../README.md"
keywords = ["sed", "find", "replace", "regex"]
license = "MIT"
homepage = "https://github.com/chmln/sd"
repository = "https://github.com/chmln/sd.git"
categories = ["command-line-utilities", "text-processing", "development-tools"]
rust-version = "1.86.0"


[profile.release]
opt-level = 3
lto = true
strip = true
