[package]
name = "sd-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "sd"
path = "src/main.rs"

[dependencies]
sd = { path = "../sd" }
clap.workspace = true

[dev-dependencies]
assert_cmd = "2.0.12"
anyhow = "1.0.75"
clap_mangen = "0.2.14"
console = "0.15.7"
regex = "1.10.2"
insta = "1.34.0"
ansi-to-html = "0.1.3"
tempfile.workspace = true
